<resources>
    <string name="app_name">HBFav Material</string>

    <string name="activity_title_bookmark">ブックマーク</string>
    <string name="activity_title_setting">ユーザー設定</string>
    <string name="activity_title_explain_app">このアプリについて</string>

    <string name="fragment_title_bookmark_favorite">タイムライン</string>
    <string name="fragment_title_bookmark_own">ブックマーク</string>
    <string name="fragment_title_hot_entry">人気エントリー</string>
    <string name="fragment_title_new_entry">新着エントリー</string>
    <string name="fragment_title_setting">設定</string>
    <string name="fragment_title_about_app">このアプリについて</string>
    <string name="fragment_title_from_developer">開発者より</string>
    <string name="fragment_title_credit">クレジット</string>

    <string name="dialog_title_set_user">はてなアカウントの設定</string>
    <string name="dialog_title_add_bookmark">ブックマークの追加</string>
    <string name="dialog_title_update_bookmark">ブックマークの更新</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="share">シェア</string>

    <string name="category_title_all">総合</string>
    <string name="category_title_world">世の中</string>
    <string name="category_title_politics_and_economy">政治と経済</string>
    <string name="category_title_life">暮らし</string>
    <string name="category_title_entertainment">エンタメ</string>
    <string name="category_title_study">学び</string>
    <string name="category_title_technology">テクノロジー</string>
    <string name="category_title_animation_and_game">アニメとゲーム</string>
    <string name="category_title_comedy">おもしろ</string>

    <string name="filter_bookmark_users_all">全て</string>
    <string name="filter_bookmark_users_comment">コメントのみ</string>

    <string name="text_hatena_account">はてなアカウント</string>
    <string name="text_hatena_account_connect">はてなブックマーク連携</string>
    <string name="text_hatena_account_connect_ok">連携中</string>
    <string name="text_hatena_account_connect_no">未連携</string>
    <string name="text_twitter_account_connect">Twitter連携</string>
    <string name="text_review">レビュー - Play Store</string>
    <string name="text_opinion">ご意見・ご要望 - GitHub</string>
    <string name="text_version">バージョン</string>
    <string name="text_add_comment">コメントを追加</string>
    <string name="text_open">公開</string>
    <string name="text_not_open">非公開</string>
    <string name="text_delete">削除</string>
    <string name="text_share_twitter">Twitterに投稿</string>
    <string name="text_read_after">あとで読む</string>
    <string name="text_progress_loading">Now Loading...</string>

    <string name="button_setting">　 設定 　</string>
    <string name="button_add">　 追加 　</string>
    <string name="button_update">　 更新 　</string>
    <string name="button_cancel">キャンセル</string>

</resources>
