<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="me.rei_m.hbfavmaterial.presentation.viewmodel.EditBookmarkDialogFragmentViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/dialog_fragment_edit_bookmark_layout_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_fragment_edit_bookmark_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_dialog_title_bottom"
            android:layout_marginLeft="@dimen/margin_outline_dialog"
            android:layout_marginRight="@dimen/margin_outline_dialog"
            android:layout_marginTop="@dimen/margin_outline_dialog"
            android:text="@{viewModel.isFirstEdit ? @string/dialog_title_add_bookmark : @string/dialog_title_update_bookmark}"
            android:textColor="@color/text_color_strong"
            android:textSize="@dimen/text_size_title" />

        <TextView
            android:id="@+id/dialog_fragment_edit_bookmark_text_article_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_outline_dialog"
            android:layout_marginLeft="@dimen/margin_outline_dialog"
            android:layout_marginRight="@dimen/margin_outline_dialog"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@{viewModel.articleTitle}" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dialog_fragment_edit_bookmark_layout_edit_bookmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_outline_dialog"
            android:layout_marginRight="@dimen/margin_outline_dialog"
            android:textColorHint="@color/app_accent_color">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dialog_fragment_edit_bookmark_edit_bookmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{!viewModel.isDelete}"
                android:hint="@string/text_add_comment"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:text="@={viewModel.comment}"
                android:textColorHint="@color/app_accent_color" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/dialog_fragment_edit_bookmark_text_comment_char_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin_outline_dialog"
            android:layout_marginRight="@dimen/margin_outline_dialog"
            android:gravity="end"
            android:text="@{viewModel.commentCount}"
            android:textColor="@{viewModel.isEnableComment ? @color/text_color_thin : @color/red}" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/dialog_fragment_edit_bookmark_switch_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin_outline_dialog"
            android:layout_marginRight="@dimen/margin_outline_dialog"
            android:background="@null"
            android:checked="@={viewModel.isOpen}"
            android:enabled="@{!viewModel.isDelete}"
            android:text="@{viewModel.isOpen ? @string/text_open : @string/text_not_open}"
            android:textColor="@color/text_color_middle" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/dialog_fragment_edit_bookmark_switch_share_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin_outline_dialog"
            android:layout_marginRight="@dimen/margin_outline_dialog"
            android:background="@null"
            android:checked="@={viewModel.isShareTwitter}"
            android:enabled="@{!viewModel.isDelete}"
            android:text="@string/text_share_twitter"
            android:textColor="@color/text_color_middle" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/dialog_fragment_edit_bookmark_switch_read_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin_outline_dialog"
            android:layout_marginRight="@dimen/margin_outline_dialog"
            android:background="@null"
            android:checked="@={viewModel.isReadAfter}"
            android:enabled="@{!viewModel.isDelete}"
            android:text="@string/text_read_after"
            android:textColor="@color/text_color_middle" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/dialog_fragment_edit_bookmark_switch_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin_outline_dialog"
            android:layout_marginRight="@dimen/margin_outline_dialog"
            android:background="@null"
            android:checked="@={viewModel.isDelete}"
            android:text="@string/text_delete"
            android:textColor="@color/text_color_middle"
            android:visibility="@{viewModel.isFirstEdit ? View.GONE : View.VISIBLE }" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_dialog_layout_buttons"
            android:layout_marginBottom="@dimen/margin_half"
            android:layout_marginLeft="@dimen/margin_outline_dialog_buttons"
            android:layout_marginRight="@dimen/margin_outline_dialog_buttons"
            android:gravity="end">

            <Button
                android:id="@+id/dialog_fragment_edit_bookmark_button_cancel"
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_button"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_half"
                android:layout_marginRight="@dimen/margin_half"
                android:layout_marginTop="@dimen/margin_dialog_button"
                android:onClick="@{viewModel::onClickCancel}"
                android:text="@string/button_cancel" />

            <Button
                android:id="@+id/dialog_fragment_edit_bookmark_button_ok"
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_button"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/margin_dialog_button"
                android:enabled="@{viewModel.isEnableComment ? true : false}"
                android:onClick="@{viewModel::onClickOk}"
                android:text="@{viewModel.isFirstEdit ? @string/button_add : @string/button_update}" />

        </LinearLayout>

    </LinearLayout>
</layout>