<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="me.rei_m.hbfavmaterial.viewmodel.widget.fragment.SettingFragmentViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fragment_setting_layout_icon_hatena_id"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_item_two_column">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_outline"
                android:layout_marginStart="@dimen/margin_outline"
                android:src="@drawable/ic_person_grey_500_36dp"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/fragment_setting_layout_text_hatena_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_item_two_column"
            android:layout_marginLeft="@dimen/margin_content_from_screen"
            android:layout_marginStart="@dimen/margin_content_from_screen"
            android:background="@drawable/bg_border_bottom_accent"
            android:gravity="center_vertical"
            android:onClick="@{viewModel::onClickHatenaId}"
            android:orientation="vertical"
            android:paddingEnd="@dimen/margin_outline"
            android:paddingLeft="0dp"
            android:paddingRight="@dimen/margin_outline"
            android:paddingStart="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_hatena_account"
                android:textSize="@dimen/text_size_caption" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.userId}"
                android:textSize="@dimen/text_size_title" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_setting_layout_icon_hatena_oauth"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_item_two_column"
            android:layout_below="@id/fragment_setting_layout_icon_hatena_id">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_outline"
                android:layout_marginStart="@dimen/margin_outline"
                android:src="@drawable/ic_sync_grey_500_36dp"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/fragment_setting_layout_text_hatena_oauth"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_item_two_column"
            android:layout_below="@id/fragment_setting_layout_text_hatena_id"
            android:layout_marginLeft="@dimen/margin_content_from_screen"
            android:layout_marginStart="@dimen/margin_content_from_screen"
            android:background="@drawable/bg_border_bottom_accent"
            android:gravity="center_vertical"
            android:onClick="@{viewModel::onClickHatenaAuthStatus}"
            android:orientation="vertical"
            android:paddingEnd="@dimen/margin_outline"
            android:paddingLeft="0dp"
            android:paddingRight="@dimen/margin_outline"
            android:paddingStart="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_hatena_account_connect"
                android:textSize="@dimen/text_size_caption" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.isAuthorisedHatena ? @string/text_account_connect_ok : @string/text_account_connect_no}"
                android:textSize="@dimen/text_size_title" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_setting_layout_icon_twitter_oauth"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_item_two_column"
            android:layout_below="@id/fragment_setting_layout_icon_hatena_oauth">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_outline"
                android:layout_marginStart="@dimen/margin_outline"
                android:src="@drawable/ic_sync_grey_500_36dp"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/fragment_setting_layout_text_twitter_oauth"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_item_two_column"
            android:layout_below="@id/fragment_setting_layout_text_hatena_oauth"
            android:layout_marginLeft="@dimen/margin_content_from_screen"
            android:layout_marginStart="@dimen/margin_content_from_screen"
            android:background="@drawable/bg_border_bottom_accent"
            android:gravity="center_vertical"
            android:onClick="@{viewModel::onClickTwitterAuthStatus}"
            android:orientation="vertical"
            android:paddingEnd="@dimen/margin_outline"
            android:paddingLeft="0dp"
            android:paddingRight="@dimen/margin_outline"
            android:paddingStart="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_twitter_account_connect"
                android:textSize="@dimen/text_size_caption" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.isAuthorisedTwitter ? @string/text_account_connect_ok : @string/text_account_connect_no}"
                android:textSize="@dimen/text_size_title" />

        </LinearLayout>

    </RelativeLayout>
</layout>